# tracker

./: .gitlab-ci.yml  HACKING.md  README  README.md  config.h.meson.in  meson.build  meson_options.txt  mkdocs.yml  tracker.doap
.gitlab-ci/: checkout-tracker-miners.sh
data/: DOMAIN.Tracker3.Miner.Extract.service.in  DOMAIN.Tracker3.Miner.Files.service.in  DOMAIN.domain.rule.in  meson.build
docs/: meson.build
docs/manpages/: meson.build  tracker-endpoint.1  tracker-info.1.txt  tracker-sparql.1.txt  tracker-sql.1.txt  xdg-tracker-portal.1
docs/reference/: meson.build
docs/reference/libtracker-miner/: meson.build
docs/tools/: ttl2sgml.c  ttl2xml.c  ttl_loader.c  ttl_model.c  ttl_model.h  ttl_xml.c  ttlresource2xml.c  ttlresource2xml.h
docs/website/: build.py  community.md  faq.md  index.md  overview.md
examples/flatpak/: org.freedesktop.TrackerSandbox.json
examples/libtracker-sparql/: async-connection.c
examples/rss-reader/: initial-data.ttl
src/: meson.build
src/libtracker-bus/: tracker-bus-statement.vala  tracker-bus.vala
src/libtracker-common/: libtracker-common.vapi  tracker-date-time.c  tracker-dbus.c  tracker-debug.c  tracker-debug.h  tracker-file-utils.c  tracker-parser.h
src/libtracker-data/: meson.build  tracker-data-manager.c  tracker-data-manager.h  tracker-data-query.c  tracker-data-update.c  tracker-data-update.h  tracker-db-interface-sqlite.c  tracker-db-manager.c  tracker-db-manager.h  tracker-property.c  tracker-property.h  tracker-sparql-grammar.h  tracker-sparql-types.c  tracker-sparql-types.h  tracker-sparql.c  tracker-turtle-reader.vala  tracker-vtab-service.c  tracker-vtab-triples.c  tracker-vtab-union.c  tracker-vtab-union.h
src/libtracker-direct/: tracker-direct.c  tracker-direct.h  tracker-direct.vapi
src/libtracker-fts/: tracker-fts-tokenizer.c  tracker-fts.c
src/libtracker-miner/: tracker-file-notifier.c
src/portal/: meson.build  org.freedesktop.portal.Tracker.service.in  tracker-portal.c  xdg-tracker-portal.service.in
tests/: meson.build  test-bus.conf.in
tests/functional-tests/: 01-insertion.py  02-sparql-bugs.py  07-graph.py  08-unique-insertions.py  09-concurrent-query.py  10-sqlite-misused.py  11-sqlite-batch-misused.py  13-threaded-store.py  14-notifier.py  14-signals.py  17-ontology-changes.py  Makefile.am  cli.py  configuration.json.in  configuration.py  fixtures.py  insertion.py  meson.build  notifier.py  ontology-changes.py  query.py  storetest.py
tests/functional-tests/common/utils/: configuration.py  expectedFailure.py  helpers.py
tests/functional-tests/ipc/: test-bus-query-cancellation.c
tests/gvdb/: meson.build
tests/libtracker-common/: meson.build  tracker-date-time-test.c  tracker-file-utils-test.c
tests/libtracker-data/: meson.build  tracker-insert-or-replace-test.c  tracker-ontology-change-test.c  tracker-ontology-test.c  tracker-service-test.c  tracker-sparql-blank-test.c  tracker-sparql-test.c
tests/libtracker-data/basic/: urn-in-as.out
tests/libtracker-data/change/: change-test-4.rq
tests/libtracker-data/constraint/: test.ontology
tests/libtracker-data/nie/: data-1.ttl
tests/libtracker-data/nmo/: data-1.ttl
tests/libtracker-data/property-paths/: data.ttl  negated-path-1.rq  negated-path-2.rq  test.ontology
tests/libtracker-data/service/: service-query-1.out
tests/libtracker-data/update/: delete-where-3.rq  test.ontology
tests/libtracker-fts/: meson.build  tracker-fts-test.c
tests/libtracker-miner/: meson.build  tracker-miner-fs-test.c  tracker-monitor-test.c
tests/libtracker-sparql/: meson.build  tracker-fd-test.c  tracker-sparql-test.c  tracker-statement-test.c
tests/tracker-steroids/: meson.build  tracker-test.c
utils/: uncrustify.cfg
(+68 files in other folders)
